--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,2 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_project_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
+NEXT_PUBLIC_SUPABASE_URL=https://pqqrbjuefporiqgglatw.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_lNlPESFa3ftz1zJ--jjg4g_sNC1_mru
