--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.5.4",
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
