--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.460.0",
     "next": "14.2.33",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
